@@ -65,7 +65,7 @@ ACE_Condition<ACE_Thread_Mutex>::ACE_Condition (ACE_Thread_Mutex &m,
 {
 // ACE_TRACE ("ACE_Condition<ACE_Thread_Mutex>::ACE_Condition<ACE_Thread_Mutex>");
   if (ACE_OS::cond_init (&this->cond_,
-                         const_cast<ACE_Condition_Attributes &> (attributes).attributes_,
+                         const_cast<ACE_condattr_t &> (attributes.attributes ()),
                          name, arg) != 0)
     ACE_ERROR ((LM_ERROR, ACE_TEXT ("%p\n"),
                 ACE_TEXT ("ACE_Condition<ACE_Thread_Mutex>::ACE_Condition<ACE_Thread_Mutex>")));
